# vgen

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  context7.json
benches/: core_bench.rs  gpu_bench.rs
skills/vgen/: SKILL.md
skills/vgen/references/: api-reference.md
src/: address.rs  gpu.rs  lib.rs  pattern.rs  provider.rs  scanner.rs
src/shaders/: field.wgsl  generator.wgsl  init.wgsl  search.wgsl  search_p2tr.wgsl  sha256.wgsl
